# AnvilAgent

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
anvil/: __main__.py
anvil/agents/: __init__.py  base_agent.py  code_agent.py  llm_agent.py
anvil/api/: __init__.py  router.py
anvil/cli/: commands.py
anvil/core/: __init__.py  agent_state.py  orchestrator.py  scheduler.py
anvil/expert/: __init__.py  mlock_manager.py  zipfian_analyzer.py
anvil/grammar/: __init__.py  constrained_decoder.py  schema_compiler.py  xgrammar_bridge.py
anvil/hardware/: __init__.py  config.py  detector.py  profiler.py
anvil/inference/: __init__.py  llama_client.py  pipeline.py
anvil/memory/: __init__.py  context_restorer.py  kv_pager.py  safetensors_store.py
anvil/sandbox/: __init__.py  compute_module.py  wasm_runner.py
configs/: anvil.yaml  hardware_profiles.yaml
scripts/: anvil-inference.service  anvil_setup.sh  download_models.sh  start_llama_server.sh
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_context.py  test_expert_pinning.py  test_grammar.py  test_hardware.py  test_integration.py  test_kv_cache.py  test_orchestrator.py  test_sandbox.py  test_setup.py
tests/benchmarks/: bench_memory.py  bench_token_speed.py
ui/: index.html
